K8S-PROJECT/BACKEND-K8S/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

    # HTTP + HTTPS listeners
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'

    # ACM certificate
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-north-1:717728193228:certificate/0732fcb6-ad86-4090-9f33-f90616825dc2
    # Redirect HTTP -> HTTPS
    alb.ingress.kubernetes.io/ssl-redirect: "443"

spec:
  ingressClassName: alb

  rules:
    - host: api.classproject.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: student-app-svc
                port:
                  number: 8080
